Fix misaligned borders in chat

--- a/frontend/src/components/ChannelPage/ChannelPage.css
+++ b/frontend/src/components/ChannelPage/ChannelPage.css
@@ -4,6 +4,8 @@
   width: 100%;
   margin-top: -8px;
   margin-left: 8px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .channel-list {
@@ -12,8 +14,9 @@
   width: 100%;
   list-style: none;
   padding-left: 10px;
-  /* background-color: blue; */
+  margin-top: 0px;
 }
+
 
 .channel-list li {
   display: flex;
@@ -67,13 +70,13 @@
 #other-component {
   background-color: #1B1D21;
   border: 1px solid #2B2A2F;
-  height: 100vh;
+  margin-top: -1px;
+  /* height: 100% ; */
 }
 
 #caret {
   color: #D1D2D3B3;
   padding-left: 7px;
-  /* padding-top: 10px; */
 }
 
 i span {
@@ -86,12 +89,9 @@ i span {
   border: none;
 
 }
-
 .fa-caret-right{
- /* color: white; */
  margin-left: 7px;
  transition: all 0.4s ease;
- /* font-weight: bold; */
 }
 
 .fa-caret-down{
@@ -100,15 +100,6 @@ i span {
  }
 
 
-#channels-h5-down {
-  /* color: #D1D2D3B3; */
-
-}
-
-#channels-h5-right{
-  /* color: white; */
-}
-
 .fa-hashtag {
   padding-top: 9px;
   padding-left: 10px;
@@ -116,19 +107,13 @@ i span {
 
 #plus {
   color: #1A171D;
-  /* background-color: blue; */
   font-style: normal;
-
   margin-top: 2px;
-  /* background-color: blue; */
   height: 15px;
   width: 16px;
-  /* margin-top: 10px; */
 display: flex;
 justify-content: center;
 align-items: center;
-/* COLOR: WHITE; */
-/* BACKGROUND-COLOR: BLUE; */
 }
 
 
@@ -141,21 +126,14 @@ align-items: center;
   padding-left: 0px;
   padding-right: 20px;
   padding-top: 12px;
+  background-color: #1A171D;
+  padding-bottom: 10px;
 }
 
 #channels-menu-label:hover #plus {
   background-color:#D1D2D3B3;
   /* border: 4px solid #D1D2D3B3; */
 }
-
-/* #plus-padding { */
-  /* background-color: green; */
-  /* padding-left: 1px;
-  padding-right: 2px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color:blue */
-/* } */
 
 #channels-h5-right {
   color: white;
@@ -171,16 +149,6 @@ align-items: center;
   margin:0px;
 }
 
-/* #channel-name{
-  color: #d5dadf;
-  font-size:16px;
-  font-weight:light;
-  padding-left: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  margin:0px;
-} */
-
 .fa-angle-down{
   color: white;
 }
@@ -194,13 +162,23 @@ align-items: center;
   margin-right: 19px;
 }
 
-#server-heading{
+.server-heading{
   margin-top: 44px;
   display:flex;
   width:100%;
   align-items:center;
   justify-content: space-between;
   border: 1px solid #2B2A2F ;
+}
+
+.other{
+  margin-top: 44px;
+  display:flex;
+  width:100%;
+  align-items:center;
+  justify-content: space-between;
+  border: 1px solid #2B2A2F ;
+  border-left: 0px;
 }
 
 
@@ -213,19 +191,18 @@ align-items: center;
   border: 1px solid #2B2A2F ;
 }
 
-
-/* #individual-channel {
-  background-color:blue;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  margin-right: 30px;
-} */
-
-/* .fa-pencil {
-  background-color: blue;
-} */
-
 .fa-hashtag {
   margin-left: 10px;
+}
+
+.split-container {
+  height: 100vh;
+}
+
+#channel-bar {
+  height: 100%;
+}
+
+#channel-name-hash {
+  padding-top: 0px;
 }
